--- a/src/main/resources/templates/discipline_form.html
+++ b/src/main/resources/templates/discipline_form.html
@@ -27,6 +27,7 @@ body {
 </style>
 </head>
 <body>
+<div th:replace="header :: header"> </div>
  <div class="container text-center">
         <div>
             <h1>Add a discipline</h1>
