--- a/src/main/resources/templates/changeDiscipline_form.html
+++ b/src/main/resources/templates/changeDiscipline_form.html
@@ -34,6 +34,7 @@ body {
  </script>
 </head>
 <body>
+<div th:replace="header :: header"> </div>
 	<div class="container text-center">
     
 	    <div>
