--- a/src/main/resources/templates/studentDiscipline.html
+++ b/src/main/resources/templates/studentDiscipline.html
@@ -59,7 +59,7 @@ body {
  </script>     
 </head>
 <body>
-
+<div th:replace="header :: header"> </div>
 	<div class="container text-center">
     
 	    <div>
@@ -105,7 +105,11 @@ body {
 	                    
 	                    </td> 
 	                </tr>
+	               
+	                <form th:action="@{/StudentDisciplineSave}" 
+        			 method="post" style="max-width: 600px; margin: 0 auto;">
 	                <button   class="btn btn-primary" type="submit">Save</button>
+	                </form>
 	                 
 	            </tbody>
 	        </table>
