--- a/src/main/resources/templates/student_form.html
+++ b/src/main/resources/templates/student_form.html
@@ -27,6 +27,7 @@
 <title>add Student</title>
 </head>
 <body>
+<div th:replace="header :: header"> </div>
  <div class="container text-center">
         <div>
             <h1>Add a student</h1>
