--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,14 +4,14 @@
    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.css'>
    <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.min.js'></script>
   </head>
-  <body>
+  <body style="background-color:#888888;">
   <h3><a th:href="@{/addTeacher}">Add a new teacher</a></h3>
                              	 <h3><a th:href="@{/addDiscipline}">Add a new discipline</a></h3>
                              	 <h3><a th:href="@{/changeStudentDiscipline}">change student discipline</a></h3>
                              	 
  <div th:fragment="header">
-   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" th:href="@{/addStudent}">Add a new student</a>
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" th:href="@{/addStudent}">New student</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -19,10 +19,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/addTeacher}">Add a new teacher <span class="sr-only">(current)</span></a>
+        <a class="nav-link" th:href="@{/addTeacher}">New teacher <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/addDiscipline}">Add a new discipline</a>
+        <a class="nav-link" th:href="@{/addDiscipline}">New discipline</a>
       </li>
       <li class="nav-item dropdown">
         
@@ -30,7 +30,31 @@
       </li>
       <li class="nav-item">
         
-        <a class="nav-link" th:href="@{/addDiscipline}">change student discipline <span class="sr-only">(current)</span></a>
+        <a class="nav-link" th:href="@{/changeStudentDiscipline}">Change student discipline <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        
+        <a class="nav-link" th:href="@{/studentsDisciplines}">Students&Disciplines <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        
+        <a class="nav-link" th:href="@{/studentsCredits}">Students&Credits <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        
+        <a class="nav-link" th:href="@{/teachersDisciplinesStudents}">Teachers&studs&credits <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        
+        <a class="nav-link" th:href="@{/TopDisciplines}">top3Disciplines <span class="sr-only">(current)</span></a>
+      </li>
+       <li class="nav-item">
+        
+        <a class="nav-link" th:href="@{/TopTeachers}">top3Teachers <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        
+        <a class="nav-link" th:href="@{/studentsAndTeachers}">top3Teachers <span class="sr-only">(current)</span></a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
