--- a/src/main/resources/templates/studentDiscipline.html
+++ b/src/main/resources/templates/studentDiscipline.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 <style>
 body {
-	  background-image: url('/images/groupStudents.jpg');
+	  background-image: url('/images/studentDisciplines.jpg');
 	    background-repeat: no-repeat;
 	    background-attachment: fixed !important;
 	    background-attachment: initial;
@@ -20,6 +20,10 @@ body {
 	    background-size: cover;
 	    width:100%;
 	 }
+	 #cooltable{background-color:black;
+opacity:75%}
+.table tr{color:white}
+label{color: white} 
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
@@ -60,7 +64,7 @@ body {
 	    </div>    
 	    <div>
 	    <div class="form-group row">
-                    <label class="col-4 col-form-label">discipline </label>
+                    <label class="col-4 col-form-label">Discipline </label>
                     <select class="form control"   id="disciplines"> 
                             <option  th:each="discipline,index : ${listDisciplines}" th:value="${discipline.id}" th:text="${discipline.name}"></option>        
                     </select>
