--- a/src/main/resources/templates/studentsAndTeachers.html
+++ b/src/main/resources/templates/studentsAndTeachers.html
@@ -5,14 +5,33 @@
 <title>Students and disciplines</title>
 <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css" />
 <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
+<style>
+body {
+	  background-image: url('/images/students&teachers.jpg');
+	    background-repeat: no-repeat;
+	    background-attachment: fixed !important;
+	    background-attachment: initial;
+	    background-position: center, center;
+	    -webkit-background-size: cover;
+	    -moz-background-size: cover;
+	    -o-background-size: cover;
+	    background-size: cover;
+	    width:100%;
+	 }
+#cooltable{background-color:black; opacity:75%}
+#cooltable2{background-color:black; opacity:75%}
+.table tr{color:white}
+h1{color:white}
+</style>
 </head>
 <body>
+<div th:replace="header :: header"> </div>
 <div class="container text-center">
 	    <div>
 	        <h1>List of Teachers and their number of disciplines</h1>
 	    </div> 
 	    <div>
-	        <table class="table table-striped table-bordered">
+	        <table id="cooltable" class="table table-striped table-bordered">
 	            <thead class="thead-dark">
 	                <tr>
 	                    <th>First Name</th>
@@ -37,7 +56,7 @@
 	        <h1>List of Students</h1>
 	    </div> 
 	    <div>
-	        <table class="table table-striped table-bordered">
+	        <table id="cooltable2"class="table table-striped table-bordered">
 	            <thead class="thead-dark">
 	                <tr>
 	                    <th>First Name</th>
